--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Movies#show</h1>
-<p>Find me in app/views/movies/show.html.erb</p>
+<h1><%=@mymovie.title%></h1>
+<h4><%=@mymovie.genre%></h4>
+<h3><%=@mymovie.rating%></h3>
